# apps/api/serializers/shelf_records.py
@@ -3,10 +3,13 @@ from uuid import UUID
 
 from porcupine.base import Serializer
 
+from apps.api.serializers.entries import EntrySerializer
+
 
 class ShelfRecordSerializer:
     class Base(Serializer):
+        id: UUID
         user_id: UUID
-        entry_id: UUID
+        entry: EntrySerializer.Base
         created_at: datetime
         updated_at: datetime
